Reorganize static assets under public directory

--- a/public/coleccion-capsula.html
+++ b/public/coleccion-capsula.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colección Esencia Urbana - RGG Atelier</title>
+    <title>Colección Cápsula - RGG Atelier</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
@@ -13,7 +13,7 @@
     <!-- AOS Animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <!-- Top Bar -->
@@ -91,18 +91,18 @@
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
                 <li class="breadcrumb-item"><a href="colecciones.html">Colecciones</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Esencia Urbana</li>
+                <li class="breadcrumb-item active" aria-current="page">Colección Cápsula</li>
             </ol>
         </nav>
     </div>
 
-    <section class="collection-hero" style="background-image: url('img/category-men.jpg');">
+    <section class="collection-hero" style="background-image: url('assets/img/category-accessories.jpg');">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
-                    <span class="badge bg-light text-dark mb-3">Otoño/Invierno 2022</span>
-                    <h1>Colección "Esencia Urbana"</h1>
-                    <p>Una propuesta que fusiona el lujo clásico con la funcionalidad contemporánea. Piezas versátiles pensadas para acompañar una agenda dinámica en la ciudad.</p>
+                    <span class="badge bg-light text-dark mb-3">Edición Limitada 2023</span>
+                    <h1>Colección Cápsula</h1>
+                    <p>Piezas esenciales diseñadas para construir un guardarropa minimalista y versátil. Una entrega reducida con acabados de alta joyería.</p>
                 </div>
             </div>
         </div>
@@ -112,17 +112,17 @@
         <div class="container">
             <div class="row align-items-center g-5">
                 <div class="col-lg-6" data-aos="fade-right">
-                    <img src="img/carlos.webp" alt="Look urbano masculino" class="img-fluid rounded shadow">
+                    <img src="assets/img/collar.webp" alt="Collar de oro blanco" class="img-fluid rounded shadow">
                 </div>
                 <div class="col-lg-6" data-aos="fade-left">
                     <div class="collection-text">
-                        <h2 class="section-title">Lujo funcional</h2>
-                        <p class="lead">Construimos un armario inteligente que responde a la vida metropolitana. Diseños depurados con tecnología textil de última generación.</p>
+                        <h2 class="section-title">Esenciales atemporales</h2>
+                        <p class="lead">Seleccionamos piezas modulables que se combinan entre sí para acompañar cualquier ocasión con sofisticación.</p>
                         <ul>
-                            <li><i class="fas fa-check"></i> Lanas tratadas con nanotecnología repelente al agua y a las arrugas.</li>
-                            <li><i class="fas fa-check"></i> Forros transpirables con microperforaciones para mantener el confort todo el día.</li>
-                            <li><i class="fas fa-check"></i> Paleta en grafito, azul petróleo y detalles níquel satinado.</li>
-                            <li><i class="fas fa-check"></i> Costuras termoselladas y acabados precisos hechos a mano.</li>
+                            <li><i class="fas fa-check"></i> Oro blanco reciclado y plata de comercio justo.</li>
+                            <li><i class="fas fa-check"></i> Piedras naturales talladas a mano con certificación responsable.</li>
+                            <li><i class="fas fa-check"></i> Estuches magnéticos que permiten combinar dijes y cadenas.</li>
+                            <li><i class="fas fa-check"></i> Producción limitada a 100 piezas numeradas.</li>
                         </ul>
                     </div>
                 </div>
@@ -135,40 +135,40 @@
             <div class="row mb-4">
                 <div class="col-12 text-center" data-aos="fade-up">
                     <h2 class="section-title">Piezas insignia</h2>
-                    <p class="section-subtitle">Prendas clave que transforman el vestidor ejecutivo con una estética moderna.</p>
+                    <p class="section-subtitle">Accesorios modulares que elevan cualquier estilismo.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4 mb-4" data-aos="fade-up">
                     <div class="product-card">
                         <div class="product-img">
-                            <img src="img/traje.webp" alt="Traje técnico grafito" class="img-fluid">
+                            <img src="assets/img/collar.webp" alt="Collar eclipse" class="img-fluid">
                         </div>
                         <div class="product-info">
-                            <h4 class="product-title">Traje técnico grafito</h4>
-                            <p class="text-muted">Tejido stretch de lana fría con memoria y forro interior termorregulador.</p>
+                            <h4 class="product-title">Collar eclipse</h4>
+                            <p class="text-muted">Dije intercambiable en ónix y cuarzo rosa con cadena ajustable.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="product-card">
                         <div class="product-img">
-                            <img src="img/camisa.webp" alt="Camisa performance azul" class="img-fluid">
+                            <img src="assets/img/pulseraOro.webp" alt="Pulsera eslabones oro" class="img-fluid">
                         </div>
                         <div class="product-info">
-                            <h4 class="product-title">Camisa performance azul</h4>
-                            <p class="text-muted">Algodón orgánico con tratamiento antiarrugas y botonadura metálica.</p>
+                            <h4 class="product-title">Pulsera eslabones oro</h4>
+                            <p class="text-muted">Sistema de cierre invisible y charms intercambiables de piedras naturales.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="product-card">
                         <div class="product-img">
-                            <img src="img/zapatos.webp" alt="Botines cuero antracita" class="img-fluid">
+                            <img src="assets/img/reloj.webp" alt="Reloj cápsula" class="img-fluid">
                         </div>
                         <div class="product-info">
-                            <h4 class="product-title">Botines cuero antracita</h4>
-                            <p class="text-muted">Plataforma ligera y suela Vibram para enfrentar jornadas urbanas.</p>
+                            <h4 class="product-title">Reloj cápsula</h4>
+                            <p class="text-muted">Esfera madre perla con correas intercambiables en cuero y satén.</p>
                         </div>
                     </div>
                 </div>
@@ -181,11 +181,11 @@
             <div class="row align-items-center g-5">
                 <div class="col-lg-5" data-aos="fade-right">
                     <h2 class="section-title">Narrativa creativa</h2>
-                    <p>Esencia Urbana rinde homenaje a la arquitectura industrial de las grandes capitales y a la energía que se respira en sus calles.</p>
-                    <blockquote>“Quise diseñar prendas que acompañen al profesional cosmopolita: flexibles, impecables y con carácter propio.” — Romina Gutiérrez</blockquote>
+                    <p>Esta cápsula condensa los códigos esenciales de RGG Atelier: líneas limpias, materiales nobles y funcionalidad.</p>
+                    <blockquote>“Queríamos crear una colección pequeña pero tremendamente poderosa, capaz de acompañarte de día y de noche.” — Romina Gutiérrez</blockquote>
                 </div>
                 <div class="col-lg-7" data-aos="fade-left">
-                    <img src="img/invierno.webp" alt="Editorial Esencia Urbana" class="img-fluid rounded shadow">
+                    <img src="assets/img/category-accessories.jpg" alt="Editorial colección cápsula" class="img-fluid rounded shadow">
                 </div>
             </div>
         </div>
@@ -193,9 +193,9 @@
 
     <section class="collection-cta">
         <div class="container">
-            <h2>Visita nuestro showroom pop-up</h2>
-            <p>Solicita una invitación exclusiva para conocer la colección en nuestra experiencia inmersiva de temporada.</p>
-            <a href="mailto:romina.gutierrez@atelier.com" class="btn btn-outline-light">Solicitar invitación</a>
+            <h2>Únete a la lista de espera</h2>
+            <p>Completa tu solicitud para acceder a la preventa exclusiva y asegurar tu pieza numerada.</p>
+            <a href="mailto:romina.gutierrez@atelier.com" class="btn btn-outline-light">Solicitar acceso</a>
         </div>
     </section>
 
