--- a/public/coleccion-elegancia-atemporal.html
+++ b/public/coleccion-elegancia-atemporal.html
@@ -13,7 +13,7 @@
     <!-- AOS Animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <!-- Top Bar -->
@@ -96,7 +96,7 @@
         </nav>
     </div>
 
-    <section class="collection-hero" style="background-image: url('img/hero-bg.jpg');">
+    <section class="collection-hero" style="background-image: url('assets/img/hero-bg.jpg');">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
@@ -112,7 +112,7 @@
         <div class="container">
             <div class="row align-items-center g-5">
                 <div class="col-lg-6" data-aos="fade-right">
-                    <img src="img/featured-1.jpg" alt="Editorial Elegancia Atemporal" class="img-fluid rounded shadow">
+                    <img src="assets/img/featured-1.jpg" alt="Editorial Elegancia Atemporal" class="img-fluid rounded shadow">
                 </div>
                 <div class="col-lg-6" data-aos="fade-left">
                     <div class="collection-text">
@@ -142,7 +142,7 @@
                 <div class="col-md-4 mb-4" data-aos="fade-up">
                     <div class="product-card">
                         <div class="product-img">
-                            <img src="img/featured-2.jpg" alt="Abrigo estructurado borgoña" class="img-fluid">
+                            <img src="assets/img/featured-2.jpg" alt="Abrigo estructurado borgoña" class="img-fluid">
                         </div>
                         <div class="product-info">
                             <h4 class="product-title">Abrigo estructurado borgoña</h4>
@@ -153,7 +153,7 @@
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="product-card">
                         <div class="product-img">
-                            <img src="img/product-2.jpg" alt="Vestido columna noche" class="img-fluid">
+                            <img src="assets/img/product-2.jpg" alt="Vestido columna noche" class="img-fluid">
                         </div>
                         <div class="product-info">
                             <h4 class="product-title">Vestido columna noche</h4>
@@ -164,7 +164,7 @@
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="product-card">
                         <div class="product-img">
-                            <img src="img/product-3.jpg" alt="Conjunto tuxedo moderno" class="img-fluid">
+                            <img src="assets/img/product-3.jpg" alt="Conjunto tuxedo moderno" class="img-fluid">
                         </div>
                         <div class="product-info">
                             <h4 class="product-title">Conjunto tuxedo moderno</h4>
@@ -185,7 +185,7 @@
                     <blockquote>“Nos inspiramos en mujeres que saben que la sofisticación está en los detalles. Nuestro objetivo fue crear piezas que abracen al cuerpo y cuenten historias de éxito.” — Romina Gutiérrez</blockquote>
                 </div>
                 <div class="col-lg-7" data-aos="fade-left">
-                    <img src="img/promo-banner.jpg" alt="Editorial colección Elegancia Atemporal" class="img-fluid rounded shadow">
+                    <img src="assets/img/promo-banner.jpg" alt="Editorial colección Elegancia Atemporal" class="img-fluid rounded shadow">
                 </div>
             </div>
         </div>
