--- a/public/coleccion-elegancia-nordica.html
+++ b/public/coleccion-elegancia-nordica.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colección Esencia Sostenible - RGG Atelier</title>
+    <title>Colección Elegancia Nórdica - RGG Atelier</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
@@ -13,7 +13,7 @@
     <!-- AOS Animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <!-- Top Bar -->
@@ -91,18 +91,18 @@
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
                 <li class="breadcrumb-item"><a href="colecciones.html">Colecciones</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Esencia Sostenible</li>
+                <li class="breadcrumb-item active" aria-current="page">Elegancia Nórdica</li>
             </ol>
         </nav>
     </div>
 
-    <section class="collection-hero" style="background-image: url('img/sostenible.webp');">
+    <section class="collection-hero" style="background-image: url('assets/img/nordica.webp');">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
-                    <span class="badge bg-light text-dark mb-3">Eco-friendly</span>
-                    <h1>Colección "Esencia Sostenible"</h1>
-                    <p>Moda consciente creada con materiales reciclados, procesos responsables y una estética depurada que honra al planeta.</p>
+                    <span class="badge bg-light text-dark mb-3">Otoño/Invierno 2021</span>
+                    <h1>Colección "Elegancia Nórdica"</h1>
+                    <p>Minimalismo sofisticado inspirado en los paisajes escandinavos. Piezas envolventes, cálidas y diseñadas para abrazar la temporada fría con estilo.</p>
                 </div>
             </div>
         </div>
@@ -112,17 +112,17 @@
         <div class="container">
             <div class="row align-items-center g-5">
                 <div class="col-lg-6" data-aos="fade-right">
-                    <img src="img/sostenible.webp" alt="Editorial sostenible" class="img-fluid rounded shadow">
+                    <img src="assets/img/abrigolanahombre.webp" alt="Abrigo lana cruda" class="img-fluid rounded shadow">
                 </div>
                 <div class="col-lg-6" data-aos="fade-left">
                     <div class="collection-text">
-                        <h2 class="section-title">Lujo responsable</h2>
-                        <p class="lead">Creamos piezas longevas con impacto ambiental reducido, garantizando transparencia en toda la cadena de valor.</p>
+                        <h2 class="section-title">Refinamiento cálido</h2>
+                        <p class="lead">Diseños depurados que apuestan por volúmenes envolventes, tejidos táctiles y detalles honestos.</p>
                         <ul>
-                            <li><i class="fas fa-check"></i> Tejidos reciclados post-consumo certificados GRS.</li>
-                            <li><i class="fas fa-check"></i> Tinturas vegetales de bajo consumo hídrico.</li>
-                            <li><i class="fas fa-check"></i> Trazabilidad digital para conocer el origen de cada materia prima.</li>
-                            <li><i class="fas fa-check"></i> Programa de recompra y reciclaje de prendas al finalizar su ciclo.</li>
+                            <li><i class="fas fa-check"></i> Lanas virgen y alpaca en tonos crudos y grises glaciares.</li>
+                            <li><i class="fas fa-check"></i> Forros acolchados en satén reciclado para retener el calor.</li>
+                            <li><i class="fas fa-check"></i> Costuras vistas y botones de madera natural certificada.</li>
+                            <li><i class="fas fa-check"></i> Accesorios tejidos a mano por artesanos nórdicos.</li>
                         </ul>
                     </div>
                 </div>
@@ -135,40 +135,40 @@
             <div class="row mb-4">
                 <div class="col-12 text-center" data-aos="fade-up">
                     <h2 class="section-title">Piezas insignia</h2>
-                    <p class="section-subtitle">Diseños conscientes que equilibran estilo y sostenibilidad.</p>
+                    <p class="section-subtitle">Texturas suaves y capas protectoras para un invierno elegante.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4 mb-4" data-aos="fade-up">
                     <div class="product-card">
                         <div class="product-img">
-                            <img src="img/abrigolanamujer.webp" alt="Abrigo lana reciclada" class="img-fluid">
+                            <img src="assets/img/abrigolanahombre.webp" alt="Abrigo capucha alpaca" class="img-fluid">
                         </div>
                         <div class="product-info">
-                            <h4 class="product-title">Abrigo lana reciclada</h4>
-                            <p class="text-muted">Hecho con fibras recuperadas y botones de cáscara de coco.</p>
+                            <h4 class="product-title">Abrigo capucha alpaca</h4>
+                            <p class="text-muted">Forro acolchado desmontable y cinturón trenzado en piel curtida vegetal.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="product-card">
                         <div class="product-img">
-                            <img src="img/pantalonchino.webp" alt="Pantalón cáñamo" class="img-fluid">
+                            <img src="assets/img/bufanda.webp" alt="Bufanda cashmere hielo" class="img-fluid">
                         </div>
                         <div class="product-info">
-                            <h4 class="product-title">Pantalón cáñamo</h4>
-                            <p class="text-muted">Tejido de cáñamo orgánico con tintura natural en tonos tierra.</p>
+                            <h4 class="product-title">Bufanda cashmere hielo</h4>
+                            <p class="text-muted">Tejido doble cara con flecos anudados manualmente.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="product-card">
                         <div class="product-img">
-                            <img src="img/sombrero.webp" alt="Sombrero fibra de palma" class="img-fluid">
+                            <img src="assets/img/reloj.webp" alt="Reloj minimal acero mate" class="img-fluid">
                         </div>
                         <div class="product-info">
-                            <h4 class="product-title">Sombrero fibra de palma</h4>
-                            <p class="text-muted">Trenzado a mano por artesanos locales con acabado hidrofugado natural.</p>
+                            <h4 class="product-title">Reloj minimal acero mate</h4>
+                            <p class="text-muted">Correa en cuero curtido vegetal y esfera inspirada en auroras boreales.</p>
                         </div>
                     </div>
                 </div>
@@ -181,11 +181,11 @@
             <div class="row align-items-center g-5">
                 <div class="col-lg-5" data-aos="fade-right">
                     <h2 class="section-title">Narrativa creativa</h2>
-                    <p>Esencia Sostenible responde al compromiso de la firma con una moda regenerativa y consciente.</p>
-                    <blockquote>“Creemos que el verdadero lujo es cuidar del planeta. Esta colección demuestra que el diseño responsable también puede ser extraordinario.” — Romina Gutiérrez</blockquote>
+                    <p>Elegancia Nórdica captura la serenidad de los bosques nevados y la luz tenue de los inviernos escandinavos.</p>
+                    <blockquote>“Buscamos prendas que inviten a la calma, que protejan y que al mismo tiempo transmitan una estética depurada.” — Romina Gutiérrez</blockquote>
                 </div>
                 <div class="col-lg-7" data-aos="fade-left">
-                    <img src="img/sostenible.webp" alt="Editorial Esencia Sostenible" class="img-fluid rounded shadow">
+                    <img src="assets/img/invierno.webp" alt="Editorial Elegancia Nórdica" class="img-fluid rounded shadow">
                 </div>
             </div>
         </div>
@@ -193,9 +193,9 @@
 
     <section class="collection-cta">
         <div class="container">
-            <h2>Conoce nuestro programa circular</h2>
-            <p>Inscríbete para recibir información sobre talleres de cuidado, reparación y reciclaje de prendas.</p>
-            <a href="mailto:romina.gutierrez@atelier.com" class="btn btn-outline-light">Unirme al programa</a>
+            <h2>Solicita una experiencia hygge</h2>
+            <p>Reserva una visita íntima con degustación nórdica para descubrir la colección en un ambiente acogedor.</p>
+            <a href="mailto:romina.gutierrez@atelier.com" class="btn btn-outline-light">Agendar visita</a>
         </div>
     </section>
 
