--- a/public/coleccion-renacimiento-natural.html
+++ b/public/coleccion-renacimiento-natural.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colección Arte en Movimiento - RGG Atelier</title>
+    <title>Colección Renacimiento Natural - RGG Atelier</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
@@ -13,7 +13,7 @@
     <!-- AOS Animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <!-- Top Bar -->
@@ -91,18 +91,18 @@
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
                 <li class="breadcrumb-item"><a href="colecciones.html">Colecciones</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Arte en Movimiento</li>
+                <li class="breadcrumb-item active" aria-current="page">Renacimiento Natural</li>
             </ol>
         </nav>
     </div>
 
-    <section class="collection-hero" style="background-image: url('img/movimiento.webp');">
+    <section class="collection-hero" style="background-image: url('assets/img/contemporaneo.webp');">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
-                    <span class="badge bg-light text-dark mb-3">Colaboración 2023</span>
-                    <h1>Colección "Arte en Movimiento"</h1>
-                    <p>Una alianza con artistas contemporáneos que transforma lienzos en prendas vivas. Cada pieza es una obra única que se activa al caminar.</p>
+                    <span class="badge bg-light text-dark mb-3">Primavera/Verano 2022</span>
+                    <h1>Colección "Renacimiento Natural"</h1>
+                    <p>Colores vibrantes, estampados botánicos y texturas que evocan jardines en flor. Una colección que celebra la energía vital de la naturaleza.</p>
                 </div>
             </div>
         </div>
@@ -112,17 +112,17 @@
         <div class="container">
             <div class="row align-items-center g-5">
                 <div class="col-lg-6" data-aos="fade-right">
-                    <img src="img/product-1.jpg" alt="Vestido performance" class="img-fluid rounded shadow">
+                    <img src="assets/img/midimujer.webp" alt="Vestido midi estampado botánico" class="img-fluid rounded shadow">
                 </div>
                 <div class="col-lg-6" data-aos="fade-left">
                     <div class="collection-text">
-                        <h2 class="section-title">Moda como lienzo</h2>
-                        <p class="lead">Nuestros creadores plasmaron trazos gestuales y texturas pictóricas sobre materiales nobles para dar vida a piezas en constante movimiento.</p>
+                        <h2 class="section-title">Botánica contemporánea</h2>
+                        <p class="lead">Fusionamos ilustraciones florales pintadas a mano con siluetas modernas que realzan la frescura femenina.</p>
                         <ul>
-                            <li><i class="fas fa-check"></i> Técnicas mixtas: serigrafía manual, pintura textil y bordado experimental.</li>
-                            <li><i class="fas fa-check"></i> Telas livianas con sensores de movimiento que iluminan pinceladas metálicas.</li>
-                            <li><i class="fas fa-check"></i> Edición limitada de 50 piezas numeradas y firmadas por cada artista.</li>
-                            <li><i class="fas fa-check"></i> Packaging inspirado en galerías con certificado de autenticidad.</li>
+                            <li><i class="fas fa-check"></i> Sedas certificadas GOTS teñidas con pigmentos vegetales.</li>
+                            <li><i class="fas fa-check"></i> Bordados 3D inspirados en hojas y pétalos de magnolia.</li>
+                            <li><i class="fas fa-check"></i> Siluetas fluidas con aperturas estratégicas para potenciar el movimiento.</li>
+                            <li><i class="fas fa-check"></i> Accesorios en rafia y bambú que completan el look natural.</li>
                         </ul>
                     </div>
                 </div>
@@ -135,40 +135,40 @@
             <div class="row mb-4">
                 <div class="col-12 text-center" data-aos="fade-up">
                     <h2 class="section-title">Piezas insignia</h2>
-                    <p class="section-subtitle">Prendas que dialogan con la luz, el color y el movimiento.</p>
+                    <p class="section-subtitle">Los esenciales que capturan el espíritu de la primavera en cada detalle.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4 mb-4" data-aos="fade-up">
                     <div class="product-card">
                         <div class="product-img">
-                            <img src="img/product-1.jpg" alt="Vestido cinético" class="img-fluid">
+                            <img src="assets/img/midimujer.webp" alt="Vestido midi acuarela" class="img-fluid">
                         </div>
                         <div class="product-info">
-                            <h4 class="product-title">Vestido cinético</h4>
-                            <p class="text-muted">Paneles satinados con pigmento fosforescente activado por el movimiento.</p>
+                            <h4 class="product-title">Vestido midi acuarela</h4>
+                            <p class="text-muted">Estampado floral pintado a mano y lazada en la espalda regulable.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="product-card">
                         <div class="product-img">
-                            <img src="img/product-4.jpg" alt="Chaqueta mural" class="img-fluid">
+                            <img src="assets/img/blusa.webp" alt="Blusa organza primavera" class="img-fluid">
                         </div>
                         <div class="product-info">
-                            <h4 class="product-title">Chaqueta mural</h4>
-                            <p class="text-muted">Bordados lineales que reinterpretan trazos urbanos a gran escala.</p>
+                            <h4 class="product-title">Blusa organza primavera</h4>
+                            <p class="text-muted">Volumen vaporoso con mangas globo y bordado de hojas doradas.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="product-card">
                         <div class="product-img">
-                            <img src="img/product-3.jpg" alt="Falda instalación" class="img-fluid">
+                            <img src="assets/img/bolso.webp" alt="Bolso rafia teñida" class="img-fluid">
                         </div>
                         <div class="product-info">
-                            <h4 class="product-title">Falda instalación</h4>
-                            <p class="text-muted">Capas de organza translúcida con microleds que dibujan patrones.</p>
+                            <h4 class="product-title">Bolso rafia teñida</h4>
+                            <p class="text-muted">Asa en bambú curado y aplique de flor bordada a tono.</p>
                         </div>
                     </div>
                 </div>
@@ -181,11 +181,11 @@
             <div class="row align-items-center g-5">
                 <div class="col-lg-5" data-aos="fade-right">
                     <h2 class="section-title">Narrativa creativa</h2>
-                    <p>La cápsula surge de sesiones creativas compartidas entre diseñadores, bailarines y artistas visuales.</p>
-                    <blockquote>“Exploramos cómo el cuerpo genera trazos cuando se mueve. Vestir esta colección es convertirse en pincel.” — Romina Gutiérrez</blockquote>
+                    <p>Renacimiento Natural surge de paseos por jardines botánicos y de la búsqueda de reconectar con lo orgánico.</p>
+                    <blockquote>“Cada prenda guarda un pequeño ecosistema bordado. Queríamos que vestir esta colección fuera como llevar un jardín propio.” — Romina Gutiérrez</blockquote>
                 </div>
                 <div class="col-lg-7" data-aos="fade-left">
-                    <img src="img/movimiento.webp" alt="Editorial Arte en Movimiento" class="img-fluid rounded shadow">
+                    <img src="assets/img/vestidoseda.webp" alt="Editorial Renacimiento Natural" class="img-fluid rounded shadow">
                 </div>
             </div>
         </div>
@@ -193,9 +193,9 @@
 
     <section class="collection-cta">
         <div class="container">
-            <h2>Asiste a la performance de lanzamiento</h2>
-            <p>Regístrate para vivir la presentación en vivo con intervención artística y acceso prioritario a la colección.</p>
-            <a href="mailto:romina.gutierrez@atelier.com" class="btn btn-outline-light">Solicitar invitación</a>
+            <h2>Descubre el atelier botánico</h2>
+            <p>Agenda una visita guiada entre arreglos florales y piezas únicas creadas para esta colección.</p>
+            <a href="mailto:romina.gutierrez@atelier.com" class="btn btn-outline-light">Reservar visita</a>
         </div>
     </section>
 
