--- a/public/coleccion-serenidad-mediterranea.html
+++ b/public/coleccion-serenidad-mediterranea.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colección Cápsula - RGG Atelier</title>
+    <title>Colección Serenidad Mediterránea - RGG Atelier</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
@@ -13,7 +13,7 @@
     <!-- AOS Animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <!-- Top Bar -->
@@ -91,18 +91,18 @@
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
                 <li class="breadcrumb-item"><a href="colecciones.html">Colecciones</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Colección Cápsula</li>
+                <li class="breadcrumb-item active" aria-current="page">Serenidad Mediterránea</li>
             </ol>
         </nav>
     </div>
 
-    <section class="collection-hero" style="background-image: url('img/category-accessories.jpg');">
+    <section class="collection-hero" style="background-image: url('assets/img/category-women.jpg');">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
-                    <span class="badge bg-light text-dark mb-3">Edición Limitada 2023</span>
-                    <h1>Colección Cápsula</h1>
-                    <p>Piezas esenciales diseñadas para construir un guardarropa minimalista y versátil. Una entrega reducida con acabados de alta joyería.</p>
+                    <span class="badge bg-light text-dark mb-3">Primavera/Verano 2023</span>
+                    <h1>Colección "Serenidad Mediterránea"</h1>
+                    <p>Una colección luminosa inspirada en el mar, la brisa cálida y los tonos pastel de la costa mediterránea. Prendas fluidas que celebran el movimiento y la frescura.</p>
                 </div>
             </div>
         </div>
@@ -112,17 +112,17 @@
         <div class="container">
             <div class="row align-items-center g-5">
                 <div class="col-lg-6" data-aos="fade-right">
-                    <img src="img/collar.webp" alt="Collar de oro blanco" class="img-fluid rounded shadow">
+                    <img src="assets/img/linomujer.webp" alt="Vestido lino marfil" class="img-fluid rounded shadow">
                 </div>
                 <div class="col-lg-6" data-aos="fade-left">
                     <div class="collection-text">
-                        <h2 class="section-title">Esenciales atemporales</h2>
-                        <p class="lead">Seleccionamos piezas modulables que se combinan entre sí para acompañar cualquier ocasión con sofisticación.</p>
+                        <h2 class="section-title">La calma del litoral</h2>
+                        <p class="lead">Seleccionamos materiales ligeros y transpirables que acompañan el cuerpo con naturalidad. Cada pieza evoca el ritmo pausado de los atardeceres frente al mar.</p>
                         <ul>
-                            <li><i class="fas fa-check"></i> Oro blanco reciclado y plata de comercio justo.</li>
-                            <li><i class="fas fa-check"></i> Piedras naturales talladas a mano con certificación responsable.</li>
-                            <li><i class="fas fa-check"></i> Estuches magnéticos que permiten combinar dijes y cadenas.</li>
-                            <li><i class="fas fa-check"></i> Producción limitada a 100 piezas numeradas.</li>
+                            <li><i class="fas fa-check"></i> Linos orgánicos, muselinas de seda y algodones egipcios ultra ligeros.</li>
+                            <li><i class="fas fa-check"></i> Siluetas envolventes con movimiento, pensadas para climas cálidos.</li>
+                            <li><i class="fas fa-check"></i> Tonos arena, coral suave, azul cielo y blanco espuma de mar.</li>
+                            <li><i class="fas fa-check"></i> Bordados delicados inspirados en cerámicas artesanales costeras.</li>
                         </ul>
                     </div>
                 </div>
@@ -135,40 +135,40 @@
             <div class="row mb-4">
                 <div class="col-12 text-center" data-aos="fade-up">
                     <h2 class="section-title">Piezas insignia</h2>
-                    <p class="section-subtitle">Accesorios modulares que elevan cualquier estilismo.</p>
+                    <p class="section-subtitle">Looks esenciales para acompañar días soleados con elegancia relajada.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4 mb-4" data-aos="fade-up">
                     <div class="product-card">
                         <div class="product-img">
-                            <img src="img/collar.webp" alt="Collar eclipse" class="img-fluid">
+                            <img src="assets/img/vestidomujer.webp" alt="Vestido midi lino melocotón" class="img-fluid">
                         </div>
                         <div class="product-info">
-                            <h4 class="product-title">Collar eclipse</h4>
-                            <p class="text-muted">Dije intercambiable en ónix y cuarzo rosa con cadena ajustable.</p>
+                            <h4 class="product-title">Vestido midi lino melocotón</h4>
+                            <p class="text-muted">Corte envolvente, cinturón tejido y botones de nácar tallados a mano.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="product-card">
                         <div class="product-img">
-                            <img src="img/pulseraOro.webp" alt="Pulsera eslabones oro" class="img-fluid">
+                            <img src="assets/img/linomujer.webp" alt="Conjunto lino natural" class="img-fluid">
                         </div>
                         <div class="product-info">
-                            <h4 class="product-title">Pulsera eslabones oro</h4>
-                            <p class="text-muted">Sistema de cierre invisible y charms intercambiables de piedras naturales.</p>
+                            <h4 class="product-title">Conjunto lino natural</h4>
+                            <p class="text-muted">Top cruzado y pantalón palazzo con bordado de olivos en hilo dorado.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="product-card">
                         <div class="product-img">
-                            <img src="img/reloj.webp" alt="Reloj cápsula" class="img-fluid">
+                            <img src="assets/img/tacones.webp" alt="Sandalias conchas marinas" class="img-fluid">
                         </div>
                         <div class="product-info">
-                            <h4 class="product-title">Reloj cápsula</h4>
-                            <p class="text-muted">Esfera madre perla con correas intercambiables en cuero y satén.</p>
+                            <h4 class="product-title">Sandalias conchas marinas</h4>
+                            <p class="text-muted">Tacón esculpido en madera de olivo y pulsera en cuero vegano marfil.</p>
                         </div>
                     </div>
                 </div>
@@ -181,11 +181,11 @@
             <div class="row align-items-center g-5">
                 <div class="col-lg-5" data-aos="fade-right">
                     <h2 class="section-title">Narrativa creativa</h2>
-                    <p>Esta cápsula condensa los códigos esenciales de RGG Atelier: líneas limpias, materiales nobles y funcionalidad.</p>
-                    <blockquote>“Queríamos crear una colección pequeña pero tremendamente poderosa, capaz de acompañarte de día y de noche.” — Romina Gutiérrez</blockquote>
+                    <p>Nos inspiramos en los pueblos blancos del Mediterráneo, en sus patios perfumados y en la serenidad que transmiten sus paisajes.</p>
+                    <blockquote>“Quise capturar la sensación de caminar descalza sobre arena tibia con el sol del atardecer. La colección abraza esa libertad y la convierte en lujo.” — Romina Gutiérrez</blockquote>
                 </div>
                 <div class="col-lg-7" data-aos="fade-left">
-                    <img src="img/category-accessories.jpg" alt="Editorial colección cápsula" class="img-fluid rounded shadow">
+                    <img src="assets/img/contemporaneo.webp" alt="Editorial Serenidad Mediterránea" class="img-fluid rounded shadow">
                 </div>
             </div>
         </div>
@@ -193,13 +193,67 @@
 
     <section class="collection-cta">
         <div class="container">
-            <h2>Únete a la lista de espera</h2>
-            <p>Completa tu solicitud para acceder a la preventa exclusiva y asegurar tu pieza numerada.</p>
-            <a href="mailto:romina.gutierrez@atelier.com" class="btn btn-outline-light">Solicitar acceso</a>
+            <h2>Organiza una asesoría digital personalizada</h2>
+            <p>Conecta con nuestro equipo de estilismo para descubrir la colección y crear looks a medida para tus próximos viajes.</p>
+            <a href="mailto:romina.gutierrez@atelier.com" class="btn btn-outline-light">Reservar styling virtual</a>
         </div>
     </section>
 
     <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="row py-5">
+                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                    <h5 class="footer-heading">RGG Atelier</h5>
+                    <p class="footer-text">Moda de lujo con diseños exclusivos y materiales premium. Experiencia de compra única con atención personalizada.</p>
+                    <div class="social-icons">
+                        <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
+                        <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+                        <a href="#" class="social-icon"><i class="fab fa-pinterest"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                    <h5 class="footer-heading">Información</h5>
+                    <ul class="footer-links">
+                        <li><a href="#">Sobre nosotros</a></li>
+                        <li><a href="#">Información de contacto</a></li>
+                        <li><a href="#">Política de privacidad</a></li>
+                        <li><a href="#">Términos y condiciones</a></li>
+                        <li><a href="#">FAQ</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                    <h5 class="footer-heading">Cuenta</h5>
+                    <ul class="footer-links">
+                        <li><a href="#">Mi cuenta</a></li>
+                        <li><a href="#">Carrito</a></li>
+                        <li><a href="#">Lista de deseos</a></li>
+                        <li><a href="#">Seguimiento de pedido</a></li>
+                        <li><a href="#">Ayuda</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-6 mb-4 mb-lg-0">
+                    <h5 class="footer-heading">Contacto</h5>
+                    <ul class="contact-info">
+                        <li><i class="fas fa-map-marker-alt"></i> Calle Serrano 15, Madrid</li>
+                        <li><i class="fas fa-phone"></i> +34 912 345 678</li>
+                        <li><i class="fas fa-envelope"></i> info@luxe.com</li>
+                        <li><i class="fas fa-clock"></i> Lun - Sáb: 10:00 - 20:00</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row py-3 border-top">
+                <div class="col-md-6 text-center text-md-start">
+                    <p class="mb-0">© 2023 LUXE. Todos los derechos reservados.</p>
+                </div>
+                <div class="col-md-6 text-center text-md-end">
+                    <img src="assets/img/payment-methods.png" alt="Métodos de pago" class="payment-methods">
+                </div>
+            </div>
+        </div>
+    </footer>
+<!-- Footer -->
     <footer class="footer">
         <div class="container py-5">
             <div class="row g-4">
@@ -231,7 +285,7 @@
             </div>
         </div>
     </footer>
-
+    
     <!-- Bootstrap JS with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- AOS Animation JS -->
