--- a/public/hombre.html
+++ b/public/hombre.html
@@ -13,7 +13,7 @@
     <!-- AOS Animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <!-- Top Bar -->
@@ -237,7 +237,7 @@
                     <div class="col-6 col-md-4 mb-4">
                         <div class="product-card">
                             <div class="product-img">
-                                <img src="img/traje.webp" alt="Traje elegante" class="img-fluid">
+                                <img src="assets/img/traje.webp" alt="Traje elegante" class="img-fluid">
                                 <!-- ICONOS DE LAS INTERACIONES 
 
                                 <div class="product-actions">
@@ -266,7 +266,7 @@
                     <div class="col-6 col-md-4 mb-4">
                         <div class="product-card">
                             <div class="product-img">
-                                <img src="img/camisa.webp" alt="Camisa formal" class="img-fluid">
+                                <img src="assets/img/camisa.webp" alt="Camisa formal" class="img-fluid">
                                 <!-- ICONOS DE LAS INTERACIONES 
 
                                 <div class="product-actions">
@@ -295,7 +295,7 @@
                     <div class="col-6 col-md-4 mb-4">
                         <div class="product-card">
                             <div class="product-img">
-                                <img src="img/jersey.webp" alt="Jersey cashmere" class="img-fluid">
+                                <img src="assets/img/jersey.webp" alt="Jersey cashmere" class="img-fluid">
                                 <!-- ICONOS DE LAS INTERACIONES 
 
                                 <div class="product-actions">
@@ -326,7 +326,7 @@
                     <div class="col-6 col-md-4 mb-4">
                         <div class="product-card">
                             <div class="product-img">
-                                <img src="img/abrigolanahombre.webp" alt="Chaqueta de cuero" class="img-fluid">
+                                <img src="assets/img/abrigolanahombre.webp" alt="Chaqueta de cuero" class="img-fluid">
                                 <!-- ICONOS DE LAS INTERACIONES 
 
                                 <div class="product-actions">
@@ -355,7 +355,7 @@
                     <div class="col-6 col-md-4 mb-4">
                         <div class="product-card">
                             <div class="product-img">
-                                <img src="img/pantalonchino.webp" alt="Pantalón chino" class="img-fluid">
+                                <img src="assets/img/pantalonchino.webp" alt="Pantalón chino" class="img-fluid">
                                 <!-- ICONOS DE LAS INTERACIONES 
 
                                 <div class="product-actions">
@@ -384,7 +384,7 @@
                     <div class="col-6 col-md-4 mb-4">
                         <div class="product-card">
                             <div class="product-img">
-                                <img src="img/zapatos.webp" alt="Zapatos Oxford" class="img-fluid">
+                                <img src="assets/img/zapatos.webp" alt="Zapatos Oxford" class="img-fluid">
                                 <!-- ICONOS DE LAS INTERACIONES 
 
                                 <div class="product-actions">
