--- a/public/coleccion-arte-en-movimiento.html
+++ b/public/coleccion-arte-en-movimiento.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colección Elegancia Nórdica - RGG Atelier</title>
+    <title>Colección Arte en Movimiento - RGG Atelier</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
@@ -13,7 +13,7 @@
     <!-- AOS Animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <!-- Top Bar -->
@@ -91,18 +91,18 @@
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
                 <li class="breadcrumb-item"><a href="colecciones.html">Colecciones</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Elegancia Nórdica</li>
+                <li class="breadcrumb-item active" aria-current="page">Arte en Movimiento</li>
             </ol>
         </nav>
     </div>
 
-    <section class="collection-hero" style="background-image: url('img/nordica.webp');">
+    <section class="collection-hero" style="background-image: url('assets/img/movimiento.webp');">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
-                    <span class="badge bg-light text-dark mb-3">Otoño/Invierno 2021</span>
-                    <h1>Colección "Elegancia Nórdica"</h1>
-                    <p>Minimalismo sofisticado inspirado en los paisajes escandinavos. Piezas envolventes, cálidas y diseñadas para abrazar la temporada fría con estilo.</p>
+                    <span class="badge bg-light text-dark mb-3">Colaboración 2023</span>
+                    <h1>Colección "Arte en Movimiento"</h1>
+                    <p>Una alianza con artistas contemporáneos que transforma lienzos en prendas vivas. Cada pieza es una obra única que se activa al caminar.</p>
                 </div>
             </div>
         </div>
@@ -112,17 +112,17 @@
         <div class="container">
             <div class="row align-items-center g-5">
                 <div class="col-lg-6" data-aos="fade-right">
-                    <img src="img/abrigolanahombre.webp" alt="Abrigo lana cruda" class="img-fluid rounded shadow">
+                    <img src="assets/img/product-1.jpg" alt="Vestido performance" class="img-fluid rounded shadow">
                 </div>
                 <div class="col-lg-6" data-aos="fade-left">
                     <div class="collection-text">
-                        <h2 class="section-title">Refinamiento cálido</h2>
-                        <p class="lead">Diseños depurados que apuestan por volúmenes envolventes, tejidos táctiles y detalles honestos.</p>
+                        <h2 class="section-title">Moda como lienzo</h2>
+                        <p class="lead">Nuestros creadores plasmaron trazos gestuales y texturas pictóricas sobre materiales nobles para dar vida a piezas en constante movimiento.</p>
                         <ul>
-                            <li><i class="fas fa-check"></i> Lanas virgen y alpaca en tonos crudos y grises glaciares.</li>
-                            <li><i class="fas fa-check"></i> Forros acolchados en satén reciclado para retener el calor.</li>
-                            <li><i class="fas fa-check"></i> Costuras vistas y botones de madera natural certificada.</li>
-                            <li><i class="fas fa-check"></i> Accesorios tejidos a mano por artesanos nórdicos.</li>
+                            <li><i class="fas fa-check"></i> Técnicas mixtas: serigrafía manual, pintura textil y bordado experimental.</li>
+                            <li><i class="fas fa-check"></i> Telas livianas con sensores de movimiento que iluminan pinceladas metálicas.</li>
+                            <li><i class="fas fa-check"></i> Edición limitada de 50 piezas numeradas y firmadas por cada artista.</li>
+                            <li><i class="fas fa-check"></i> Packaging inspirado en galerías con certificado de autenticidad.</li>
                         </ul>
                     </div>
                 </div>
@@ -135,40 +135,40 @@
             <div class="row mb-4">
                 <div class="col-12 text-center" data-aos="fade-up">
                     <h2 class="section-title">Piezas insignia</h2>
-                    <p class="section-subtitle">Texturas suaves y capas protectoras para un invierno elegante.</p>
+                    <p class="section-subtitle">Prendas que dialogan con la luz, el color y el movimiento.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4 mb-4" data-aos="fade-up">
                     <div class="product-card">
                         <div class="product-img">
-                            <img src="img/abrigolanahombre.webp" alt="Abrigo capucha alpaca" class="img-fluid">
+                            <img src="assets/img/product-1.jpg" alt="Vestido cinético" class="img-fluid">
                         </div>
                         <div class="product-info">
-                            <h4 class="product-title">Abrigo capucha alpaca</h4>
-                            <p class="text-muted">Forro acolchado desmontable y cinturón trenzado en piel curtida vegetal.</p>
+                            <h4 class="product-title">Vestido cinético</h4>
+                            <p class="text-muted">Paneles satinados con pigmento fosforescente activado por el movimiento.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="product-card">
                         <div class="product-img">
-                            <img src="img/bufanda.webp" alt="Bufanda cashmere hielo" class="img-fluid">
+                            <img src="assets/img/product-4.jpg" alt="Chaqueta mural" class="img-fluid">
                         </div>
                         <div class="product-info">
-                            <h4 class="product-title">Bufanda cashmere hielo</h4>
-                            <p class="text-muted">Tejido doble cara con flecos anudados manualmente.</p>
+                            <h4 class="product-title">Chaqueta mural</h4>
+                            <p class="text-muted">Bordados lineales que reinterpretan trazos urbanos a gran escala.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="product-card">
                         <div class="product-img">
-                            <img src="img/reloj.webp" alt="Reloj minimal acero mate" class="img-fluid">
+                            <img src="assets/img/product-3.jpg" alt="Falda instalación" class="img-fluid">
                         </div>
                         <div class="product-info">
-                            <h4 class="product-title">Reloj minimal acero mate</h4>
-                            <p class="text-muted">Correa en cuero curtido vegetal y esfera inspirada en auroras boreales.</p>
+                            <h4 class="product-title">Falda instalación</h4>
+                            <p class="text-muted">Capas de organza translúcida con microleds que dibujan patrones.</p>
                         </div>
                     </div>
                 </div>
@@ -181,11 +181,11 @@
             <div class="row align-items-center g-5">
                 <div class="col-lg-5" data-aos="fade-right">
                     <h2 class="section-title">Narrativa creativa</h2>
-                    <p>Elegancia Nórdica captura la serenidad de los bosques nevados y la luz tenue de los inviernos escandinavos.</p>
-                    <blockquote>“Buscamos prendas que inviten a la calma, que protejan y que al mismo tiempo transmitan una estética depurada.” — Romina Gutiérrez</blockquote>
+                    <p>La cápsula surge de sesiones creativas compartidas entre diseñadores, bailarines y artistas visuales.</p>
+                    <blockquote>“Exploramos cómo el cuerpo genera trazos cuando se mueve. Vestir esta colección es convertirse en pincel.” — Romina Gutiérrez</blockquote>
                 </div>
                 <div class="col-lg-7" data-aos="fade-left">
-                    <img src="img/invierno.webp" alt="Editorial Elegancia Nórdica" class="img-fluid rounded shadow">
+                    <img src="assets/img/movimiento.webp" alt="Editorial Arte en Movimiento" class="img-fluid rounded shadow">
                 </div>
             </div>
         </div>
@@ -193,9 +193,9 @@
 
     <section class="collection-cta">
         <div class="container">
-            <h2>Solicita una experiencia hygge</h2>
-            <p>Reserva una visita íntima con degustación nórdica para descubrir la colección en un ambiente acogedor.</p>
-            <a href="mailto:romina.gutierrez@atelier.com" class="btn btn-outline-light">Agendar visita</a>
+            <h2>Asiste a la performance de lanzamiento</h2>
+            <p>Regístrate para vivir la presentación en vivo con intervención artística y acceso prioritario a la colección.</p>
+            <a href="mailto:romina.gutierrez@atelier.com" class="btn btn-outline-light">Solicitar invitación</a>
         </div>
     </section>
 
