--- a/public/coleccion-esencia-sostenible.html
+++ b/public/coleccion-esencia-sostenible.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Colección Renacimiento Natural - RGG Atelier</title>
+    <title>Colección Esencia Sostenible - RGG Atelier</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
@@ -13,7 +13,7 @@
     <!-- AOS Animation -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <!-- Top Bar -->
@@ -91,18 +91,18 @@
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
                 <li class="breadcrumb-item"><a href="colecciones.html">Colecciones</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Renacimiento Natural</li>
+                <li class="breadcrumb-item active" aria-current="page">Esencia Sostenible</li>
             </ol>
         </nav>
     </div>
 
-    <section class="collection-hero" style="background-image: url('img/contemporaneo.webp');">
+    <section class="collection-hero" style="background-image: url('assets/img/sostenible.webp');">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8">
-                    <span class="badge bg-light text-dark mb-3">Primavera/Verano 2022</span>
-                    <h1>Colección "Renacimiento Natural"</h1>
-                    <p>Colores vibrantes, estampados botánicos y texturas que evocan jardines en flor. Una colección que celebra la energía vital de la naturaleza.</p>
+                    <span class="badge bg-light text-dark mb-3">Eco-friendly</span>
+                    <h1>Colección "Esencia Sostenible"</h1>
+                    <p>Moda consciente creada con materiales reciclados, procesos responsables y una estética depurada que honra al planeta.</p>
                 </div>
             </div>
         </div>
@@ -112,17 +112,17 @@
         <div class="container">
             <div class="row align-items-center g-5">
                 <div class="col-lg-6" data-aos="fade-right">
-                    <img src="img/midimujer.webp" alt="Vestido midi estampado botánico" class="img-fluid rounded shadow">
+                    <img src="assets/img/sostenible.webp" alt="Editorial sostenible" class="img-fluid rounded shadow">
                 </div>
                 <div class="col-lg-6" data-aos="fade-left">
                     <div class="collection-text">
-                        <h2 class="section-title">Botánica contemporánea</h2>
-                        <p class="lead">Fusionamos ilustraciones florales pintadas a mano con siluetas modernas que realzan la frescura femenina.</p>
+                        <h2 class="section-title">Lujo responsable</h2>
+                        <p class="lead">Creamos piezas longevas con impacto ambiental reducido, garantizando transparencia en toda la cadena de valor.</p>
                         <ul>
-                            <li><i class="fas fa-check"></i> Sedas certificadas GOTS teñidas con pigmentos vegetales.</li>
-                            <li><i class="fas fa-check"></i> Bordados 3D inspirados en hojas y pétalos de magnolia.</li>
-                            <li><i class="fas fa-check"></i> Siluetas fluidas con aperturas estratégicas para potenciar el movimiento.</li>
-                            <li><i class="fas fa-check"></i> Accesorios en rafia y bambú que completan el look natural.</li>
+                            <li><i class="fas fa-check"></i> Tejidos reciclados post-consumo certificados GRS.</li>
+                            <li><i class="fas fa-check"></i> Tinturas vegetales de bajo consumo hídrico.</li>
+                            <li><i class="fas fa-check"></i> Trazabilidad digital para conocer el origen de cada materia prima.</li>
+                            <li><i class="fas fa-check"></i> Programa de recompra y reciclaje de prendas al finalizar su ciclo.</li>
                         </ul>
                     </div>
                 </div>
@@ -135,40 +135,40 @@
             <div class="row mb-4">
                 <div class="col-12 text-center" data-aos="fade-up">
                     <h2 class="section-title">Piezas insignia</h2>
-                    <p class="section-subtitle">Los esenciales que capturan el espíritu de la primavera en cada detalle.</p>
+                    <p class="section-subtitle">Diseños conscientes que equilibran estilo y sostenibilidad.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-4 mb-4" data-aos="fade-up">
                     <div class="product-card">
                         <div class="product-img">
-                            <img src="img/midimujer.webp" alt="Vestido midi acuarela" class="img-fluid">
+                            <img src="assets/img/abrigolanamujer.webp" alt="Abrigo lana reciclada" class="img-fluid">
                         </div>
                         <div class="product-info">
-                            <h4 class="product-title">Vestido midi acuarela</h4>
-                            <p class="text-muted">Estampado floral pintado a mano y lazada en la espalda regulable.</p>
+                            <h4 class="product-title">Abrigo lana reciclada</h4>
+                            <p class="text-muted">Hecho con fibras recuperadas y botones de cáscara de coco.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="100">
                     <div class="product-card">
                         <div class="product-img">
-                            <img src="img/blusa.webp" alt="Blusa organza primavera" class="img-fluid">
+                            <img src="assets/img/pantalonchino.webp" alt="Pantalón cáñamo" class="img-fluid">
                         </div>
                         <div class="product-info">
-                            <h4 class="product-title">Blusa organza primavera</h4>
-                            <p class="text-muted">Volumen vaporoso con mangas globo y bordado de hojas doradas.</p>
+                            <h4 class="product-title">Pantalón cáñamo</h4>
+                            <p class="text-muted">Tejido de cáñamo orgánico con tintura natural en tonos tierra.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4 mb-4" data-aos="fade-up" data-aos-delay="200">
                     <div class="product-card">
                         <div class="product-img">
-                            <img src="img/bolso.webp" alt="Bolso rafia teñida" class="img-fluid">
+                            <img src="assets/img/sombrero.webp" alt="Sombrero fibra de palma" class="img-fluid">
                         </div>
                         <div class="product-info">
-                            <h4 class="product-title">Bolso rafia teñida</h4>
-                            <p class="text-muted">Asa en bambú curado y aplique de flor bordada a tono.</p>
+                            <h4 class="product-title">Sombrero fibra de palma</h4>
+                            <p class="text-muted">Trenzado a mano por artesanos locales con acabado hidrofugado natural.</p>
                         </div>
                     </div>
                 </div>
@@ -181,11 +181,11 @@
             <div class="row align-items-center g-5">
                 <div class="col-lg-5" data-aos="fade-right">
                     <h2 class="section-title">Narrativa creativa</h2>
-                    <p>Renacimiento Natural surge de paseos por jardines botánicos y de la búsqueda de reconectar con lo orgánico.</p>
-                    <blockquote>“Cada prenda guarda un pequeño ecosistema bordado. Queríamos que vestir esta colección fuera como llevar un jardín propio.” — Romina Gutiérrez</blockquote>
+                    <p>Esencia Sostenible responde al compromiso de la firma con una moda regenerativa y consciente.</p>
+                    <blockquote>“Creemos que el verdadero lujo es cuidar del planeta. Esta colección demuestra que el diseño responsable también puede ser extraordinario.” — Romina Gutiérrez</blockquote>
                 </div>
                 <div class="col-lg-7" data-aos="fade-left">
-                    <img src="img/vestidoseda.webp" alt="Editorial Renacimiento Natural" class="img-fluid rounded shadow">
+                    <img src="assets/img/sostenible.webp" alt="Editorial Esencia Sostenible" class="img-fluid rounded shadow">
                 </div>
             </div>
         </div>
@@ -193,9 +193,9 @@
 
     <section class="collection-cta">
         <div class="container">
-            <h2>Descubre el atelier botánico</h2>
-            <p>Agenda una visita guiada entre arreglos florales y piezas únicas creadas para esta colección.</p>
-            <a href="mailto:romina.gutierrez@atelier.com" class="btn btn-outline-light">Reservar visita</a>
+            <h2>Conoce nuestro programa circular</h2>
+            <p>Inscríbete para recibir información sobre talleres de cuidado, reparación y reciclaje de prendas.</p>
+            <a href="mailto:romina.gutierrez@atelier.com" class="btn btn-outline-light">Unirme al programa</a>
         </div>
     </section>
 
